--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   },
   "devDependencies": {
     "@octokit/rest": "19.0.4",
-    "@sveltejs/adapter-static": "1.0.0-next.43",
-    "@sveltejs/kit": "1.0.0-next.504",
+    "@sveltejs/adapter-static": "1.0.0-next.44",
+    "@sveltejs/kit": "1.0.0-next.507",
     "@tailwindcss/typography": "0.5.7",
     "@types/d3-path": "3.0.0",
     "@types/d3-selection": "3.0.3",
     "@types/debug": "4.1.7",
-    "@types/jest": "29.0.3",
+    "@types/jest": "29.1.1",
     "@types/lodash.orderby": "4.6.7",
     "@types/node": "18.7.23",
     "@types/node-emoji": "1.8.2",
@@ -42,14 +42,14 @@
     "chalk": "5.0.1",
     "cross-env": "7.0.3",
     "cssnano": "5.1.13",
-    "dotenv": "16.0.2",
+    "dotenv": "16.0.3",
     "eslint": "8.24.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-svelte3": "4.0.0",
     "husky": "8.0.1",
-    "jest": "29.1.1",
+    "jest": "29.1.2",
     "mdsvex": "0.10.6",
-    "postcss": "8.4.16",
+    "postcss": "8.4.17",
     "postcss-load-config": "4.0.1",
     "postcss-nested": "5.0.6",
     "prettier": "2.7.1",
@@ -60,10 +60,10 @@
     "svelte-preprocess": "4.10.7",
     "svelte-range-slider-pips": "2.0.3",
     "tailwindcss": "3.1.8",
-    "ts-jest": "29.0.2",
+    "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
     "tslib": "2.4.0",
     "typescript": "4.8.4",
-    "vite": "^3.1.3"
+    "vite": "3.1.4"
   }
 }
