--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "@types/debug": "4.1.7",
     "@types/jest": "29.2.4",
     "@types/lodash.orderby": "4.6.7",
-    "@types/node": "18.11.16",
+    "@types/node": "18.11.17",
     "@types/node-emoji": "1.8.2",
-    "@typescript-eslint/eslint-plugin": "5.46.1",
-    "@typescript-eslint/parser": "5.46.1",
+    "@typescript-eslint/eslint-plugin": "5.47.0",
+    "@typescript-eslint/parser": "5.47.0",
     "autoprefixer": "10.4.13",
     "chalk": "5.2.0",
     "cross-env": "7.0.3",
@@ -55,7 +55,10 @@
     "postcss-nested": "6.0.0",
     "prettier": "2.8.1",
     "prettier-plugin-svelte": "2.9.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0",
     "remark-emoji": "3.0.2",
+    "remark-toc": "^8.0.1",
     "svelte": "3.55.0",
     "svelte-check": "2.10.2",
     "svelte-preprocess": "5.0.0",
@@ -66,6 +69,6 @@
     "tslib": "2.4.1",
     "typescript": "4.9.4",
     "unist-util-visit": "4.1.1",
-    "vite": "4.0.1"
+    "vite": "4.0.2"
   }
 }
