--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/analytics": "1.3.1",
     "clsx": "2.1.1",
     "next": "14.2.4",
+    "next-mdx-remote": "^5.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
@@ -30,6 +31,7 @@
     "eslint": "9.5.0",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "9.1.0",
+    "gray-matter": "^4.0.3",
     "postcss": "8.4.38",
     "postcss-nested": "6.0.1",
     "prettier": "3.3.2",
