--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --ignore-path .gitignore --write .",
+    "format:check": "prettier --ignore-path .gitignore --check .",
+    "test": "yarn jest"
   },
   "dependencies": {
     "@vercel/analytics": "1.3.1",
     "clsx": "2.1.1",
+    "d3-selection": "^3.0.0",
     "next": "14.2.4",
-    "next-mdx-remote": "^5.0.0",
+    "next-mdx-remote": "5.0.0",
+    "rc-slider": "10.6.2",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
@@ -22,6 +27,8 @@
     "@mdx-js/react": "3.0.1",
     "@next/mdx": "14.2.4",
     "@tailwindcss/typography": "0.5.13",
+    "@types/d3-selection": "3.0.10",
+    "@types/jest": "29.5.12",
     "@types/mdx": "2.0.13",
     "@types/node": "20.14.8",
     "@types/react": "18.3.3",
@@ -31,7 +38,8 @@
     "eslint": "9.5.0",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "9.1.0",
-    "gray-matter": "^4.0.3",
+    "gray-matter": "4.0.3",
+    "jest": "29.7.0",
     "postcss": "8.4.38",
     "postcss-nested": "6.0.1",
     "prettier": "3.3.2",
@@ -40,6 +48,7 @@
     "rehype-slug": "6.0.0",
     "remark-emoji": "5.0.0",
     "tailwindcss": "3.4.4",
+    "ts-jest": "29.1.5",
     "typescript": "5.5.2"
   }
 }
