--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@vercel/analytics": "1.3.1",
     "clsx": "2.1.1",
     "d3-selection": "^3.0.0",
+    "lodash.orderby": "4.6.0",
     "next": "14.2.4",
-    "next-mdx-remote": "5.0.0",
     "rc-slider": "10.6.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react": "18.3.1"
   },
   "devDependencies": {
     "@jsdevtools/rehype-toc": "3.0.2",
@@ -29,24 +29,26 @@
     "@tailwindcss/typography": "0.5.13",
     "@types/d3-selection": "3.0.10",
     "@types/jest": "29.5.12",
+    "@types/lodash.orderby": "4.6.9",
     "@types/mdx": "2.0.13",
     "@types/node": "20.14.8",
-    "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/react": "18.3.3",
     "autoprefixer": "10.4.19",
     "cssnano": "7.0.3",
-    "eslint": "9.5.0",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "9.1.0",
+    "eslint": "9.5.0",
     "gray-matter": "4.0.3",
     "jest": "29.7.0",
-    "postcss": "8.4.38",
     "postcss-nested": "6.0.1",
-    "prettier": "3.3.2",
+    "postcss": "8.4.38",
     "prettier-plugin-tailwindcss": "0.6.5",
+    "prettier": "3.3.2",
     "rehype-autolink-headings": "7.1.0",
     "rehype-slug": "6.0.0",
     "remark-emoji": "5.0.0",
+    "remark-prism": "1.3.6",
     "tailwindcss": "3.4.4",
     "ts-jest": "29.1.5",
     "typescript": "5.5.2"
