--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "fetch:projects": "yarn cross-env DEBUG=newstackwhodis:* tsx --tsconfig ./tsconfig.node.json ./src/api/github-fetcher.ts",
+    "fetch": "yarn fetch:projects",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -13,44 +15,50 @@
   },
   "dependencies": {
     "@vercel/analytics": "1.3.1",
+    "chalk": "5.3.0",
     "clsx": "2.1.1",
-    "d3-selection": "^3.0.0",
+    "d3-selection": "3.0.0",
+    "debug": "4.3.5",
     "lodash.orderby": "4.6.0",
     "next": "14.2.4",
     "rc-slider": "10.6.2",
-    "react-dom": "18.3.1",
-    "react": "18.3.1"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "@jsdevtools/rehype-toc": "3.0.2",
     "@mdx-js/loader": "3.0.1",
     "@mdx-js/react": "3.0.1",
     "@next/mdx": "14.2.4",
+    "@octokit/rest": "21.0.0",
     "@tailwindcss/typography": "0.5.13",
     "@types/d3-selection": "3.0.10",
     "@types/jest": "29.5.12",
     "@types/lodash.orderby": "4.6.9",
     "@types/mdx": "2.0.13",
     "@types/node": "20.14.8",
-    "@types/react-dom": "18.3.0",
     "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
+    "cross-env": "7.0.3",
     "cssnano": "7.0.3",
+    "eslint": "9.5.0",
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "9.1.0",
-    "eslint": "9.5.0",
     "gray-matter": "4.0.3",
     "jest": "29.7.0",
-    "postcss-nested": "6.0.1",
+    "node-emoji": "2.1.3",
     "postcss": "8.4.38",
-    "prettier-plugin-tailwindcss": "0.6.5",
+    "postcss-nested": "6.0.1",
     "prettier": "3.3.2",
+    "prettier-plugin-tailwindcss": "0.6.5",
     "rehype-autolink-headings": "7.1.0",
     "rehype-slug": "6.0.0",
     "remark-emoji": "5.0.0",
     "remark-prism": "1.3.6",
     "tailwindcss": "3.4.4",
     "ts-jest": "29.1.5",
+    "tsx": "4.16.2",
     "typescript": "5.5.2"
   }
 }
