--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "rehype-autolink-headings": "7.1.0",
     "rehype-slug": "6.0.0",
     "remark-emoji": "5.0.0",
+    "remark-frontmatter": "5.0.0",
     "remark-prism": "1.3.6",
     "tailwindcss": "3.4.4",
     "ts-jest": "29.2.1",
