--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "debug": "4.3.6",
     "lodash.orderby": "4.6.0",
     "next": "14.2.5",
-    "rc-slider": "11.1.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-slider-kit": "1.0.0-beta-0"
   },
   "devDependencies": {
     "@jsdevtools/rehype-toc": "3.0.2",
