--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "chalk": "5.3.0",
     "clsx": "2.1.1",
     "d3-selection": "3.0.0",
-    "debug": "4.3.6",
+    "debug": "4.3.7",
     "lodash.orderby": "4.6.0",
-    "next": "14.2.5",
+    "next": "14.2.8",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-slider-kit": "1.0.0-beta-0"
@@ -29,37 +29,40 @@
     "@jsdevtools/rehype-toc": "3.0.2",
     "@mdx-js/loader": "3.0.1",
     "@mdx-js/react": "3.0.1",
-    "@next/mdx": "14.2.5",
-    "@octokit/rest": "21.0.1",
-    "@tailwindcss/typography": "0.5.14",
+    "@next/mdx": "14.2.8",
+    "@octokit/rest": "21.0.2",
+    "@shikijs/twoslash": "1.16.2",
+    "@tailwindcss/typography": "0.5.15",
     "@types/d3-selection": "3.0.10",
     "@types/jest": "29.5.12",
     "@types/lodash.orderby": "4.6.9",
     "@types/mdx": "2.0.13",
-    "@types/node": "22.2.0",
-    "@types/react": "18.3.3",
+    "@types/node": "22.5.4",
+    "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
     "cross-env": "7.0.3",
-    "cssnano": "7.0.5",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5",
+    "cssnano": "7.0.6",
+    "eslint": "9.9.1",
+    "eslint-config-next": "14.2.8",
     "eslint-config-prettier": "9.1.0",
     "gray-matter": "4.0.3",
     "jest": "29.7.0",
     "node-emoji": "2.1.3",
-    "postcss": "8.4.41",
+    "postcss": "8.4.45",
     "postcss-nested": "6.2.0",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.6.6",
     "rehype-autolink-headings": "7.1.0",
+    "rehype-raw": "7.0.0",
     "rehype-slug": "6.0.0",
     "remark-emoji": "5.0.1",
     "remark-frontmatter": "5.0.0",
     "remark-prism": "1.3.6",
-    "tailwindcss": "3.4.9",
-    "ts-jest": "29.2.4",
-    "tsx": "4.17.0",
+    "remark-shiki-twoslash": "3.1.3",
+    "tailwindcss": "3.4.10",
+    "ts-jest": "29.2.5",
+    "tsx": "4.19.0",
     "typescript": "5.5.4"
   }
 }
