--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "d3-selection": "3.0.0",
     "debug": "4.3.7",
     "lodash.orderby": "4.6.0",
-    "next": "14.2.8",
+    "next": "14.2.9",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-slider-kit": "1.0.0-beta-0"
@@ -29,9 +29,9 @@
     "@jsdevtools/rehype-toc": "3.0.2",
     "@mdx-js/loader": "3.0.1",
     "@mdx-js/react": "3.0.1",
-    "@next/mdx": "14.2.8",
+    "@next/mdx": "14.2.9",
     "@octokit/rest": "21.0.2",
-    "@shikijs/twoslash": "1.16.2",
+    "@shikijs/twoslash": "1.16.3",
     "@tailwindcss/typography": "0.5.15",
     "@types/d3-selection": "3.0.10",
     "@types/jest": "29.5.12",
@@ -43,8 +43,8 @@
     "autoprefixer": "10.4.20",
     "cross-env": "7.0.3",
     "cssnano": "7.0.6",
-    "eslint": "9.9.1",
-    "eslint-config-next": "14.2.8",
+    "eslint": "9.10.0",
+    "eslint-config-next": "14.2.9",
     "eslint-config-prettier": "9.1.0",
     "gray-matter": "4.0.3",
     "jest": "29.7.0",
@@ -60,9 +60,10 @@
     "remark-frontmatter": "5.0.0",
     "remark-prism": "1.3.6",
     "remark-shiki-twoslash": "3.1.3",
+    "shiki": "1.17.0",
     "tailwindcss": "3.4.10",
     "ts-jest": "29.2.5",
     "tsx": "4.19.0",
-    "typescript": "5.5.4"
+    "typescript": "5.6.2"
   }
 }
