--- a/package.json
+++ b/package.json
@@ -32,27 +32,25 @@
     "@next/mdx": "15.1.2",
     "@octokit/rest": "21.0.2",
     "@shikijs/twoslash": "1.24.3",
-    "@tailwindcss/typography": "0.5.15",
+    "@tailwindcss/postcss": "4.0.6",
     "@types/d3-selection": "3.0.11",
     "@types/jest": "29.5.14",
     "@types/lodash.orderby": "4.6.9",
     "@types/mdx": "2.0.13",
     "@types/node": "22.10.2",
-    "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
-    "autoprefixer": "10.4.20",
+    "@types/react": "19.0.2",
     "cross-env": "7.0.3",
-    "cssnano": "7.0.6",
-    "eslint": "9.17.0",
     "eslint-config-next": "15.1.2",
     "eslint-config-prettier": "9.1.0",
+    "eslint": "9.17.0",
     "gray-matter": "4.0.3",
     "jest": "29.7.0",
     "node-emoji": "2.2.0",
-    "postcss": "8.4.49",
     "postcss-nested": "7.0.2",
+    "postcss": "8.4.49",
+    "prettier-plugin-tailwindcss": "0.6.11",
     "prettier": "3.4.2",
-    "prettier-plugin-tailwindcss": "0.6.9",
     "rehype-autolink-headings": "7.1.0",
     "rehype-raw": "7.0.0",
     "rehype-slug": "6.0.0",
@@ -61,7 +59,7 @@
     "remark-prism": "1.3.6",
     "remark-shiki-twoslash": "3.1.3",
     "shiki": "1.24.3",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.0.6",
     "ts-jest": "29.2.5",
     "tsx": "4.19.2",
     "typescript": "5.7.2"
