--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "format:check": "prettier --ignore-path .gitignore --check .",
     "test": "yarn jest"
   },
+  "engines": {
+    "node": ">=22"
+  },
   "dependencies": {
     "@vercel/analytics": "1.5.0",
     "chalk": "5.4.1",
