--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "yarn jest"
   },
   "engines": {
-    "node": ">=22"
+    "node": "22.x"
   },
   "dependencies": {
     "@vercel/analytics": "1.5.0",
