--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
     "node": "^22"
   },
   "dependencies": {
+    "@rc-component/slider": "1.0.0",
     "@vercel/analytics": "1.5.0",
     "chalk": "5.6.2",
     "clsx": "2.1.1",
     "d3-selection": "3.0.0",
-    "lodash.orderby": "4.6.0",
     "next": "15.5.4",
-    "rc-slider": "11.1.9",
     "react-dom": "19.1.1",
     "react": "19.1.1"
   },
@@ -46,6 +45,7 @@
     "debug": "4.4.3",
     "eslint-config-next": "15.5.4",
     "eslint-config-prettier": "10.1.8",
+    "lodash.orderby": "4.6.0",
     "eslint": "9.36.0",
     "gray-matter": "4.0.3",
     "jest": "30.2.0",
