--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "format": "prettier --ignore-path .gitignore --write .",
     "format:check": "prettier --ignore-path .gitignore --check .",
     "test": "yarn jest"
@@ -23,8 +23,8 @@
     "clsx": "2.1.1",
     "d3-selection": "3.0.0",
     "next": "15.5.4",
-    "react-dom": "19.2.0",
-    "react": "19.2.0"
+    "react": "19.2.0",
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@jsdevtools/rehype-toc": "3.0.2",
@@ -39,21 +39,21 @@
     "@types/lodash.orderby": "4.6.9",
     "@types/mdx": "2.0.13",
     "@types/node": "24.7.0",
-    "@types/react-dom": "19.2.1",
     "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.1",
     "cross-env": "10.1.0",
     "debug": "4.4.3",
+    "eslint": "9.37.0",
     "eslint-config-next": "15.5.4",
     "eslint-config-prettier": "10.1.8",
-    "lodash.orderby": "4.6.0",
-    "eslint": "9.37.0",
     "gray-matter": "4.0.3",
     "jest": "30.2.0",
+    "lodash.orderby": "4.6.0",
     "node-emoji": "2.2.0",
-    "postcss-nested": "7.0.2",
     "postcss": "8.5.6",
-    "prettier-plugin-tailwindcss": "0.6.14",
+    "postcss-nested": "7.0.2",
     "prettier": "3.6.2",
+    "prettier-plugin-tailwindcss": "0.6.14",
     "rehype-autolink-headings": "7.1.0",
     "rehype-raw": "7.0.0",
     "rehype-slug": "6.0.0",
