--- a/package.json
+++ b/package.json
@@ -36,27 +36,29 @@
     "@types/lodash.orderby": "4.6.9",
     "@types/mdx": "2.0.13",
     "@types/node": "25.0.2",
-    "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
+    "@types/react": "19.2.7",
     "cross-env": "10.1.0",
     "debug": "4.4.3",
-    "eslint": "9.39.2",
     "eslint-config-next": "16.0.10",
     "eslint-config-prettier": "10.1.8",
+    "eslint": "9.39.2",
     "gray-matter": "4.0.3",
     "jest": "30.2.0",
     "lodash.orderby": "4.6.0",
     "node-emoji": "2.2.0",
-    "postcss": "8.5.6",
     "postcss-nested": "7.0.2",
-    "prettier": "3.7.4",
     "prettier-plugin-tailwindcss": "0.7.2",
+    "prettier": "3.7.4",
     "rehype-autolink-headings": "7.1.0",
     "rehype-raw": "7.0.0",
     "rehype-slug": "6.0.0",
+    "rehype-stringify": "10.0.1",
     "remark-emoji": "5.0.2",
     "remark-frontmatter": "5.0.0",
-    "remark-prism": "1.3.6",
+    "remark-parse": "11.0.0",
+    "remark-rehype": "11.1.2",
+    "shiki": "3.20.0",
     "tailwindcss": "4.1.18",
     "ts-jest": "29.4.6",
     "tsx": "4.21.0",
